2004-01-12  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-01-11  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Daniel van Eeden.

2004-01-11  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Updated Portuguese translation.

2004-01-10  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added missing files.

2004-01-09  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-01-07  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-01-07  Geert Stappers  <stappers@stappers.nl>

	* POTFILES.in:
	Regenerated, with uss/mkpotfilesin version 1.6,
	this will effect the .po files.

2004-01-04  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation

2003-12-23  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Updated Portuguese translation.

2003-12-21  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-12-21  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-12-15  Geert Stappers  <stappers@stappers.nl>

	* POTFILES.in:
	Regenerated, with uss/mkpotfilesin version 1.6,
	this will effect the .po files.
	Thanks to Marcel Telka.

2003-11-24  Geert Stappers  <stappers@stappers.nl>

	* POTFILES.in:
	Regenerated, with uss/mkpotfilesin version 1.6,
	this will effect the .po files.

2003-11-20  Geert Stappers  <stappers@stappers.nl>

	* POTFILES.in:
	Regenerated, with uss/mkpotfilesin version 1.5,
	this will effect the .po files.

2003-11-18  Christian Neumair  <chris@gnome-de.org>

	* de.po: Updated German translation.

2003-11-15  Jordi Mallach  <jordi@sindominio.net>

	* ca.po: Updated Catalan translation.

2003-11-12  David Malcolm  <david@davemalcolm.demon.co.uk>

	* POTFILES.in: Added examples/*.xds.in and src/cong-dispspec-element.c

2003-11-12  Duarte Loreto <happyguy_pt@hotmail.com>
