@@ -1,5 +1,5 @@
-# Generated by upstream script uss/mkpotfilesin
 # List of source files containing translatable strings.
+# Generated by upstream script uss/mkpotfilesin
 data/conglomerate.desktop.in
 data/conglomerate.keys.in
 data/conglomerate.schemas.in
@@ -112,10 +112,21 @@ src/cong-node-properties-dialog.c
 src/cong-node.c
 src/cong-overview-view.c
 src/cong-parser-error.c
+src/cong-plugin-manager.c
 src/cong-plugin.c
 src/cong-primary-window.c
 src/cong-progress-checklist.c
 src/cong-range.c
+src/cong-service-doc-tool.c
+src/cong-service-document-factory.c
+src/cong-service-editor-node-factory.c
+src/cong-service-exporter.c
+src/cong-service-importer.c
+src/cong-service-node-property-dialog.c
+src/cong-service-node-tool.c
+src/cong-service-print-method.c
+src/cong-service-tool.c
+src/cong-service.c
 src/cong-source-view.c
 src/cong-text-cache.c
 src/cong-traversal-node.c
