@@ -1,3 +1,10 @@
+2004-01-12  Geert Stappers  <stappers@stappers.nl>
+
+	* POTFILES.in:
+	Regenerated, with uss/mkpotfilesin version 1.6,
+	this will effect the .po files.
+	(found the new "service" plug in files)
+
 2004-01-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
